fix swagger & naming
